deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-name-deployment
  labels:
    app: hello-name
spec:
  replicas: 3
  selector:
    matchLabels:
      app: hello-name
  template:
    metadata:
      labels:
        app: hello-name
    spec:
      containers:
      - name: hello-name
        image: kristiyanyanchev/open:latest
        ports:
        - containerPort: 8090
        readinessProbe:
          httpGet:
            path: /health
            port: 8090
          initialDelaySeconds: 5
          periodSeconds: 5
          timeoutSeconds: 1
          successThreshold: 1
          failureThreshold: 3
